--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
         <div class="header__bottom">
-            <h1 class="header__title">Amazing Shop Layouts</h1>
+            <h1 class="header__title">Nmadir nmadir</h1>
             <span class="header__subtitle">
                 Grayson Collection</span>
                 <a href="" class="header__btn btn">SHOP NOW</a>
@@ -95,7 +95,7 @@
         </section>
         <section class="product">
             <div class="container">
-                <h2 class="title product__title">Highly Customizable</h2>
+                <h2 class="title product__title"> meee jsfdf</h2>
                 <p class="text ptoduct__text">Style your products and shop pages, add a cart widget to your header,
                     and convert clicks into sales.</p>
                     <div class="product__content">
